[package]
name = "netcode-rs"
version = "0.1.0"
edition = "2018"
authors = ["Zsolt Bölöny <bolony.zsolt@gmail.com>"]
keywords = ["netcode"]
description = "Pure Rust implementation of the netcode.io protocol"

[dependencies]
log = "0.4"
byteorder = "1.3"
time = "0.2"
chacha20poly1305 = "0.6"
getrandom = "0.2"

[dev-dependencies]
env_logger = "0.7"
lazy_static = "1.4"
